[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Libs/kenney_towerDefense/Models/OBJ format/towerRound_sampleD.obj" type="ArrayMesh" id=1]
[ext_resource path="res://Scenes/Towers/TowerR.gd" type="Script" id=2]

[sub_resource type="SphereShape" id=1]
radius = 3.0045

[node name="RedTower" type="Area"]
collision_layer = 4
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = ExtResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.7

[connection signal="area_entered" from="." to="." method="_on_RedTower_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_RedTower_area_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
